# ft_malloc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.c  run.sh
inc/: ft_malloc.h  ft_malloc_private.h
src/: CMakeLists.txt  free.c  main.c  malloc.c  realloc.c  show_alloc_mem.c
tests/: test1.c
